# lattica

./: .gitignore  AGENTS.md  Cargo.toml  README.md  bench.md
algebra/: Cargo.toml
algebra/benches/: large_prime.rs  ops.rs  rns_large.rs
algebra/src/: lib.rs
algebra/src/arith/: bigint.rs  composite.rs  gf2.rs  large_modulus.rs  large_prime.rs  large_prime_profiles.rs  large_rns.rs  large_rns_profiles.rs  large_zm.rs  large_zm_profiles.rs  limb.rs  mod.rs  ntt.rs  prime.rs  ring.rs  rns.rs  z2k.rs  zm.rs
algebra/src/lattice/: mod.rs  params.rs  problems.rs  types.rs
algebra/src/lattice/sampling/: mod.rs  toy.rs
algebra/src/poly/: automorphism.rs  decomposition.rs  mod.rs  ntt.rs  ring.rs  twisted_ntt.rs
algebra/src/simd/: dispatch.rs  mod.rs  montgomery.rs  montgomery_prime.rs
algebra/src/simd/aarch64/: gf2.rs  mod.rs  u16_arith.rs  u32_arith.rs  u64_arith.rs  u8_arith.rs
algebra/src/simd/avx2/: gf2.rs  mod.rs  u16_arith.rs  u32_arith.rs  u64_arith.rs  u8_arith.rs
algebra/tests/: ui.rs
algebra/tests/ui/poly/: invalid_degree_non_power_of_two.rs  invalid_degree_zero.rs
algebra/tests/ui/prime_field/: composite_modulus.rs  even_modulus.rs  too_large_modulus.rs  too_small_modulus.rs
commit/: Cargo.toml
commit/benches/: ajtai.rs  ajtai_goldilocks.rs  ajtai_large.rs  bdlop.rs  gadget.rs  prepared_paths.rs
commit/examples/: size_snapshot.rs
commit/src/: error.rs  lib.rs  linear.rs  ntt.rs  sampling.rs  traits.rs
commit/src/ajtai/: mod.rs  params.rs  tests.rs
commit/src/bdlop/: mod.rs  params.rs  tests.rs
commit/src/gadget/: mod.rs  params.rs  tests.rs
docs/: commit_backend_support.md  large_modulus_support.md  overview.md  poseidon2_goldilocks_profile.md  rns_context.md  simd.md  techdebts.md
labrador/: Cargo.toml  README.md  parameter.md
labrador/examples/: fibonacci_round_trip.rs
labrador/src/: challenges.rs  crs.rs  error.rs  jl.rs  lib.rs  proof.rs  prover.rs  relation.rs  traits.rs  verifier.rs
labrador/src/last_level/: mod.rs  prover.rs  reduced_garbage.rs  verifier.rs
labrador/src/main_protocol/: aggregation.rs  amortization.rs  garbage.rs  mod.rs  step_prover.rs  step_verifier.rs  verify_equations.rs
labrador/src/params/: builder.rs  challenge_profile.rs  jl_profile.rs  mod.rs
labrador/src/recursion/: decompose.rs  mod.rs  split.rs  target_relation.rs
labrador/src/reduction/: app_ring.rs  arith_r1cs.rs  binary_r1cs.rs  mixed_r1cs.rs  mod.rs  r1cs_mod_rns.rs
relations/: Cargo.toml
relations/examples/: ccs_toy.rs  r1cs_fibonacci.rs  r1cs_toy.rs
relations/src/: demo.rs  error.rs  lib.rs  traits.rs
relations/src/ccs/: instance.rs  mod.rs  witness.rs
relations/src/r1cs/: instance.rs  mod.rs  witness.rs
relations/src/witness/: mod.rs  norms.rs
scripts/: README.md  refresh_commit_bench_report.sh
serialize/: Cargo.toml
serialize/derive/: Cargo.toml
serialize/derive/src/: lib.rs
serialize/src/: lib.rs
std/: Cargo.toml
std/src/: lib.rs  process.rs
transcript/: Cargo.toml
transcript/benches/: poseidon2.rs
transcript/src/: canonical.rs  encoding.rs  error.rs  field.rs  lib.rs  traits.rs
transcript/src/hash/: mod.rs  poseidon2.rs  shake.rs
transcript/src/hash/poseidon2/: params.rs  permutation.rs  profile_goldilocks.rs
