[workspace]
resolver = "2"
members = [
    "std",
    "serialize",
    "serialize/derive",
    "algebra",
    "commit",
    "relations",
    "transcript",
    "labrador",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
repository = "https://github.com/mrain/gridland"
license = "Apache-2.0"

[profile.bench]
codegen-units = 1
