[package]
name = "grid-algebra"
description = "Gridland: modular arithmetic, polynomial rings, and lattice types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["std"]
std = ["grid-std/std", "grid-serialize/std"]
parallel = ["grid-std/parallel"]

[dependencies]
grid-std = { path = "../std", default-features = false }
grid-serialize = { path = "../serialize", default-features = false }
dashmap = { version = "6", default-features = false }
once_cell = { version = "1", default-features = false }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "ops"
harness = false

[[bench]]
name = "large_prime"
harness = false

[[bench]]
name = "rns_large"
harness = false
