[package]
name = "grid-labrador"
description = "Gridland: generic LaBRADOR prover and verifier flow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["std"]
std = [
    "grid-std/std",
    "grid-serialize/std",
    "grid-algebra/std",
    "grid-commit/std",
    "grid-relations/std",
    "grid-transcript/std",
]

[dependencies]
grid-std = { path = "../std", default-features = false }
grid-serialize = { path = "../serialize", default-features = false }
grid-algebra = { path = "../algebra", default-features = false }
grid-commit = { path = "../commit", default-features = false }
grid-relations = { path = "../relations", default-features = false }
grid-transcript = { path = "../transcript", default-features = false }
chacha20 = { version = "0.10", default-features = false, features = ["cipher"] }
rand_chacha = { version = "0.10", default-features = false }

[dev-dependencies]
criterion = "0.8"
backtrace = "0.3"
libc = "0.2"
