[package]
name = "grid-relations"
description = "Gridland: relation systems and norm-tracked witnesses"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["std"]
std = ["grid-std/std", "grid-serialize/std", "grid-algebra/std"]

[dependencies]
grid-std = { path = "../std", default-features = false }
grid-serialize = { path = "../serialize", default-features = false }
grid-algebra = { path = "../algebra", default-features = false }
