[package]
name = "grid-serialize-derive"
description = "Gridland: derive macros for CanonicalSerialize and CanonicalDeserialize"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
